--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,10 @@ html {
     line-height: 1.4;
 }
 
+body {
+    overflow: hidden;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
