--- a/src/css/spinner.css
+++ b/src/css/spinner.css
@@ -3,14 +3,17 @@
    with position:fixed. Width, height, top and left speak
    for themselves. Background we set to 80% white with
    our animation centered, and no-repeating */
-.modal {
-    display:    none;
-    position:   fixed;
-    z-index:    1000;
-    top:        0;
-    left:       0;
-    height:     100%;
-    width:      100%;
+.modal, .lock {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba( 255, 255, 255, .8 );
+}
+.spinner {
     background: rgba( 255, 255, 255, .8 )
                 url('../img/spinner.gif')
                 50% 50%
@@ -19,12 +22,12 @@
 
 /* When the body has the loading class, we turn
    the scrollbar off with overflow:hidden */
-body.loading {
+body.loading, body.locked {
     overflow: hidden;
 }
 
 /* Anytime the body has the loading class, our
    modal element will be visible */
-body.loading .modal {
+body.loading .modal, body.locked .lock {
     display: block;
 }
